# advanced-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
configs/: prometheus.yml
docs/experiments/: step2_chunking_analysis.md  step3_embeddings_analysis.md  step4_hybrid_analysis.md  step5_reranking_analysis.md  step6.5_agentic_analysis.md  step6.6_fix_generator_analysis.md  step6_generation_analysis.md  step7_evaluation_analysis.md  step8_deployment_analysis.md  step9_mistral_integration_analysis.md
docs/theory/: 00_project_theory_overview.md  01_chunking_theory.md  02_embeddings_theory.md  04_reranking_theory.md  (+6 more)
scripts/: ablation_study.py  build_index.py  compare_chunking.py  compare_generators.py  compare_rerankers.py  compare_retrievers.py  evaluate_agentic.py  evaluate_hotpot.py  evaluate_mistral_grader.py  extract_ground_truth.py  generate_more_queries.py  plot_agentic_comparison.py  prepare_hotpot.py  prepare_squad.py  run_all_experiments.py  run_eval.py  setup_validation.py  test_agentic_mvp.py  test_retrieval.py  tune_hybrid_weights.py
src/: agentic_pipeline.py  chunking.py  embeddings.py  generator.py  graders.py  loader.py  mistral_generator.py  mistral_grader.py  pipeline.py  reranker.py  retriever.py  utils.py  web_search.py
tests/: test_ab_testing.py  test_agentic_pipeline.py  test_api_cache.py  test_api_circuit_breaker.py  test_api_health.py  test_api_integration.py  test_api_query.py  test_chunking.py  test_embeddings.py  test_error_analysis.py  test_evaluation.py  test_generator.py  test_graders.py  test_human_eval.py  test_mistral_generator.py  test_mistral_grader.py  test_reranker.py  test_retriever.py  test_web_search.py
(+22 files in other folders)
