[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-rag"
version = "0.1.0"
description = "Production-ready RAG system with hybrid retrieval and re-ranking"
authors = [
    {name = "Mathe Clement", email = "clementmathe1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "sentence-transformers>=3.3.0",
    "accelerate>=1.1.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
]

api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
# Command-line scripts
rag-build-index = "scripts.build_index:main"
rag-test-retrieval = "scripts.test_retrieval:main"
rag-prepare-squad = "scripts.prepare_squad:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
